--- a/AnimatedWheelPage/style.css
+++ b/AnimatedWheelPage/style.css
@@ -100,7 +100,7 @@ button.control.next {
 .wheel-section svg .item-circle {
   transform-origin: center center;
   filter: drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.1));
-  transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-duration);
+  transition: transform ease var(--transition-duration);
   cursor: pointer;
 }
 .wheel-section svg .item-circle.item-circle-one {
@@ -128,7 +128,7 @@ button.control.next {
   transform: rotate(calc(315deg + var(--circle-rotation)));
 }
 .wheel-section svg .item-circle-text {
-  transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-duration), opacity linear var(--transition-duration);
+  transition: transform ease var(--transition-duration), opacity linear var(--transition-duration);
   font-family: "Gellix-Bold";
   font-size: 10.3px;
   font-weight: 700;
@@ -167,7 +167,7 @@ button.control.next {
 }
 .wheel-section svg .group-item-circle-text {
   transform-origin: center center;
-  transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-duration);
+  transition: transform ease var(--transition-duration);
 }
 .wheel-section svg .group-item-circle-text.group-item-circle-text-one {
   transform: rotate(calc(0deg + var(--circle-rotation)));
@@ -241,7 +241,7 @@ button.control.next {
   width: 0%;
   display: block;
   background-image: linear-gradient(to right, #4c48ff, #2aa3ff);
-  transition: width cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s var(--transition-duration);
+  transition: width ease 0.25s var(--transition-duration);
   transform: translateX(-50%);
   left: 50%;
   position: relative;
@@ -262,7 +262,7 @@ button.control.next {
   padding-top: 10px;
   opacity: 0;
   margin-top: -10px;
-  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s calc(var(--transition-duration) + 0.6s);
+  transition: all ease 0.25s calc(var(--transition-duration) + 0.25s);
 }
 .wheel-section .branches-wrapper .branches .branch .items .item .text strong {
   font-weight: 700;
@@ -277,7 +277,7 @@ button.control.next {
   margin: auto;
   transform: translateX(0px);
   background-image: linear-gradient(to bottom, #4c48ff, #2aa3ff);
-  transition: height cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s calc(var(--transition-duration) + 0.3s);
+  transition: height ease 0.25s calc(var(--transition-duration) + 0.25s);
 }
 .wheel-section .branches-wrapper .branches .branch.spread {
   opacity: 1;
