--- a/AnimatedWheelPage/style.scss
+++ b/AnimatedWheelPage/style.scss
@@ -113,7 +113,7 @@ button.control {
             //transform: rotate(45deg);
             transform-origin: center center;
             filter: drop-shadow(0px 2px 1px rgba(0,0,0,0.1));
-            transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-duration);
+            transition: transform  ease  var(--transition-duration);
             cursor: pointer;
 
             &.item-circle-one {
@@ -152,7 +152,7 @@ button.control {
         .item-circle-text {
             //transform: rotate(45deg);
             //transform-origin: center center;
-            transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-duration), opacity linear var(--transition-duration);
+            transition: transform  ease   var(--transition-duration), opacity linear var(--transition-duration);
             font-family: 'Gellix-Bold';
             font-size: 10.3px;
             font-weight: 700;
@@ -206,7 +206,7 @@ button.control {
 
         .group-item-circle-text {
             transform-origin: center center;
-            transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) var(--transition-duration);
+            transition: transform  ease   var(--transition-duration);
 
             &.group-item-circle-text-one {
                 transform: rotate(calc(0deg + var(--circle-rotation)));
@@ -299,7 +299,7 @@ button.control {
                     width: 0%;
                     display: block;
                     background-image: linear-gradient(to right, #4c48ff, #2aa3ff);
-                    transition: width cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s var(--transition-duration);
+                    transition: width  ease  0.25s var(--transition-duration);
                     transform: translateX(-50%);
                     left: 50%;
                     position: relative;
@@ -323,7 +323,7 @@ button.control {
                             padding-top: 10px;
                             opacity: 0;
                             margin-top: -10px;
-                            transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s calc(var(--transition-duration) + 0.6s);
+                            transition: all  ease  0.25s calc(var(--transition-duration) + 0.25s);
 
                             strong {
                                 font-weight: 700;
@@ -340,7 +340,7 @@ button.control {
                             margin: auto;
                             transform: translateX(0px);
                             background-image: linear-gradient(to bottom, #4c48ff, #2aa3ff);
-                            transition: height cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s calc(var(--transition-duration) + 0.3s);
+                            transition: height  ease  0.25s calc(var(--transition-duration) + 0.25s);
                         }
                     }
                 }
