--- a/AnimatedWheelPage/style.css
+++ b/AnimatedWheelPage/style.css
@@ -351,11 +351,15 @@ button.control.next {
     width: 40px;
     height: 40px;
     background-size: 80%;
+    position: static;
+    margin: 0 10px;
+    display: inline-block;
   }
 
   .wheel-and-controls {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: center;
   }
 
   .wheel-section .branches-wrapper {
