--- a/AnimatedWheelPage/style.css
+++ b/AnimatedWheelPage/style.css
@@ -39,7 +39,7 @@ body {
 
 h1.page-title {
   position: absolute;
-  top: 325px;
+  top: 290px;
   margin: 0;
   left: 50px;
   font-size: 32px;
@@ -87,6 +87,7 @@ button.control.next {
 
 .wheel-section {
   max-width: 800px;
+  max-width: 760px;
   width: 100%;
   margin: 0 auto 0 auto;
   position: relative;
@@ -98,6 +99,7 @@ button.control.next {
   display: block;
   max-width: 100%;
   height: auto;
+  width: 500px;
 }
 .wheel-section svg .central-circle-one {
   filter: drop-shadow(0px 0 4px rgba(0, 0, 0, 0.1));
